fixing spacing for login and adding reply button to comments

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -163,6 +163,7 @@ li{
   font-family: verdana;
   font-size: .9em;
   padding: 25px;
+  width: 75%;
 }
 
 .post-container img {
